--- a/ui/components/assetSelect/assets-search.scss
+++ b/ui/components/assetSelect/assets-search.scss
@@ -1,7 +1,26 @@
 .asset {
   padding: 10px 0;
   border-bottom: 1px solid #e0e0e0;
-  .image {
-    width: 40px;
+  cursor: pointer;
+}
+
+.selectedAsset {
+  cursor: pointer;
+  img {
+    padding: 0 10px;
   }
+  span {
+    padding-right: 10px;
+  }
+}
+
+.image {
+  width: 40px;
+}
+
+.search {
+  width: 100%!important;
+  padding: 0 0 8px 0!important;
+  text-indent: 10px;
+  border-bottom: 1px solid #fff;
 }
