--- a/ui/components/assetSelect/assets-search.scss
+++ b/ui/components/assetSelect/assets-search.scss
@@ -2,6 +2,9 @@
   padding: 10px 0;
   border-bottom: 1px solid #e0e0e0;
   cursor: pointer;
+  &:last-child {
+    border-bottom: none;
+  }
 }
 
 .selectedAsset {
