adjust virtual list.

--- a/ui/components/assetSelect/assets-search.scss
+++ b/ui/components/assetSelect/assets-search.scss
@@ -1,10 +1,17 @@
-.asset {
+%assets-base {
   padding: 10px 0;
-  border-bottom: 1px solid #e0e0e0;
   cursor: pointer;
-  &:last-child {
-    border-bottom: none;
-  }
+
+}
+
+.asset {
+  @extend %assets-base;
+  border-bottom: none;
+}
+
+.assets {
+  @extend %assets-base;
+  border-bottom: 1px solid #e0e0e0;
 }
 
 .selectedAsset {
